<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SettingsOptions"
    tools:ignore="PrivateResource">

    <include
        android:id="@+id/settings_toolbar"
        layout="@layout/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_Help"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:lineSpacingExtra="@dimen/activity_vertical_margin"
        android:text="@string/settings_help_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_privacy_policy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="391dp" />

    <Switch
        android:id="@+id/dark"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="24dp"
        android:checked="false"
        android:text="@string/settings_dark_mode"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorB"
        android:theme="@style/SwitchSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar" />

    <Switch
        android:id="@+id/sounds"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/settings_sounds"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorB"
        android:theme="@style/SwitchSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark" />

    <Button
        android:id="@+id/button_Tos"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:lineSpacingExtra="@dimen/activity_vertical_margin"
        android:text="@string/settings_tos"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_About" />

    <Button
        android:id="@+id/button_privacy_policy"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:lineSpacingExtra="@dimen/activity_vertical_margin"
        android:text="@string/settings_privacy"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Tos" />

    <Button
        android:id="@+id/button_About"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:lineSpacingExtra="@dimen/activity_vertical_margin"
        android:text="@string/settings_about"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sounds" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="190dp"
        android:layout_height="44dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:gravity="center"
        android:text="@string/settings_version"
        android:textColor="@color/colorB"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Help" />





</androidx.constraintlayout.widget.ConstraintLayout>


